--- a/App.axaml
+++ b/App.axaml
@@ -1,9 +1,12 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="LibreSplit.App"
+             xmlns:convert="clr-namespace:LibreSplit.Convert"
              RequestedThemeVariant="Dark">
              <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
-
+    <Application.Resources>
+    <convert:TimeSpanToStringConverter x:Key="TimeSpanToStringConverter"/>
+  </Application.Resources>
     <Application.Styles>
         <FluentTheme />
     <Style Selector="Grid">
