--- a/Source/MainWindow.axaml
+++ b/Source/MainWindow.axaml
@@ -4,10 +4,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LibreSplit.Timing"
         xmlns:root="clr-namespace:LibreSplit"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        mc:Ignorable="d" Width="300" Height="450"
         x:Class="LibreSplit.MainWindow"
         xmlns:controls="clr-namespace:LibreSplit.Controls;assembly=LibreSplit"
         x:DataType="root:MainWindow"
+        SystemDecorations="None"
         Title="LibreSplit">
     <DockPanel>
     <Menu DockPanel.Dock="Top">
@@ -17,32 +18,32 @@
         <MenuItem Header="Save" Click="SaveFileMethod"/>
         <MenuItem Header="Save As" Click="SaveAsFileMethod"/>
     </MenuItem>
+    
     <MenuItem Header="Edit">
         <MenuItem Header="Edit Splits" Click="EditSplitsMethod"/>
     </MenuItem>
     <MenuItem Header="Preferences">
         <MenuItem Header="Themes" Click="ThemesMethod"/>
     </MenuItem>
+    <MenuItem Header="Close" Click="CloseWindow"/>
     </Menu>
-    <StackPanel>
-        <TextBlock Foreground="Black" Background="White" Text="{Binding CurrentTime, Converter={StaticResource TimeSpanToStringConverter}}"/>
+    <DockPanel>
         <ListBox x:Name="splitListBox">
             <ListBox.ItemTemplate>
                 <DataTemplate x:DataType="local:SegmentData">
                 <Grid>
                     <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <TextBlock Grid.Column="0" Text="{Binding Label}" Margin="1"/>
-                    <TextBlock Grid.Column="1" Text="{Binding CurrentDelta, Converter={StaticResource TimeSpanToStringConverter}}" Margin="1"/>
-                    <TextBlock Grid.Column="2" Text="{Binding CurrentSplitTime, Converter={StaticResource TimeSpanToStringConverter}}" Margin="1"/>
+                    <TextBlock Grid.Column="0" Text="{Binding Label}" Margin="1" HorizontalAlignment="Left"/>
+                    <TextBlock Grid.Column="1" Text="{Binding CurrentDelta, Converter={StaticResource TimeSpanToStringConverter}}" Margin="1" HorizontalAlignment="Right"/>
+                    <TextBlock Grid.Column="2" Text="{Binding CurrentSplitTime, Converter={StaticResource TimeSpanToStringConverter}}" Margin="1" HorizontalAlignment="Right"/>
                 </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-    </StackPanel>
+    </DockPanel>
     </DockPanel>
 </Window>
