--- a/Source/MainWindow.axaml
+++ b/Source/MainWindow.axaml
@@ -33,7 +33,7 @@
                 <DataTemplate x:DataType="local:SegmentData">
                 <Grid>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="2*"/>
                         <ColumnDefinition Width="*"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
