--- a/Source/SplitEditor.axaml
+++ b/Source/SplitEditor.axaml
@@ -9,7 +9,7 @@
       <Button Content="Remove Split" Click="OnRemoveSplitClicked"/>
       <StackPanel Orientation="Horizontal">
         <Label>Start Time:</Label>
-        <TextBox x:DataType="local:RunData" Text="{Binding StartTime, Mode=TwoWay, Converter={StaticResource TimeSpanToStringConverter}}" />
+        <TextBox x:Name="startTimeBox" x:DataType="local:RunData" Text="{Binding StartTime, Mode=TwoWay, Converter={StaticResource TimeSpanToStringConverter}}" />
       </StackPanel> 
     </StackPanel>
     <Grid DockPanel.Dock="Top">
