--- a/Source/MainWindow.axaml
+++ b/Source/MainWindow.axaml
@@ -1,49 +1,54 @@
 <Window xmlns="https://github.com/avaloniaui"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:LibreSplit.Timing"
-        xmlns:root="clr-namespace:LibreSplit"
-        mc:Ignorable="d" Width="300" Height="800"
-        x:Class="LibreSplit.MainWindow"
-        xmlns:controls="clr-namespace:LibreSplit.Controls;assembly=LibreSplit"
-        x:DataType="root:MainWindow"
-        SystemDecorations="None"
-        Title="LibreSplit">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:LibreSplit.Timing"
+    xmlns:root="clr-namespace:LibreSplit"
+    mc:Ignorable="d" Width="300" Height="800"
+    x:Class="LibreSplit.MainWindow"
+    xmlns:controls="clr-namespace:LibreSplit.Controls;assembly=LibreSplit"
+    x:DataType="root:MainWindow"
+    SystemDecorations="None"
+    Title="LibreSplit">
     <DockPanel>
-    <Menu DockPanel.Dock="Top">
-        <MenuItem Header="File">
-        <MenuItem Header="New" Click="NewFileMethod"/>
-        <MenuItem Header="Open" Click="OpenFileMethod"/>
-        <MenuItem Header="Save" Click="SaveFileMethod"/>
-        <MenuItem Header="Save As" Click="SaveAsFileMethod"/>
-    </MenuItem>
-    
-    <MenuItem Header="Edit">
-        <MenuItem Header="Edit Splits" Click="EditSplitsMethod"/>
-    </MenuItem>
-    <MenuItem Header="Preferences">
-        <MenuItem Header="Themes" Click="ThemesMethod"/>
-    </MenuItem>
-    <MenuItem Header="Close" Click="CloseWindow"/>
-    </Menu>
-    <DockPanel>
-        <ListBox x:Name="splitListBox">
-            <ListBox.ItemTemplate>
-                <DataTemplate x:DataType="local:SegmentData">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="2*"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-                    <TextBlock Grid.Column="0" Text="{Binding Label}" Margin="1" HorizontalAlignment="Left"/>
-                    <TextBlock Grid.Column="1" Text="{Binding CurrentDelta, Converter={StaticResource TimeSpanToStringConverter}}" Margin="1" HorizontalAlignment="Right"/>
-                    <TextBlock Grid.Column="2" Text="{Binding CurrentSplitTime, Converter={StaticResource TimeSpanToStringConverter}}" Margin="1" HorizontalAlignment="Right"/>
-                </Grid>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-        </ListBox>
-    </DockPanel>
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="File">
+                <MenuItem Header="New" Click="NewFileMethod" />
+                <MenuItem Header="Open" Click="OpenFileMethod" />
+                <MenuItem Header="Save" Click="SaveFileMethod" />
+                <MenuItem Header="Save As" Click="SaveAsFileMethod" />
+            </MenuItem>
+
+            <MenuItem Header="Edit">
+                <MenuItem Header="Edit Splits" Click="EditSplitsMethod" />
+            </MenuItem>
+            <MenuItem Header="Preferences">
+                <MenuItem Header="Themes" Click="ThemesMethod" />
+            </MenuItem>
+            <MenuItem Header="Close" Click="CloseWindow" />
+        </Menu>
+        <DockPanel>
+            <ListBox x:Name="splitListBox">
+                <ListBox.ItemTemplate>
+                    <DataTemplate x:DataType="local:SegmentData">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="2*" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Column="0" Text="{Binding Label}" Margin="1"
+                                HorizontalAlignment="Left" />
+                            <TextBlock Grid.Column="1"
+                                Text="{Binding SegmentTime, Converter={StaticResource TimeSpanToStringConverter}}"
+                                Margin="1" HorizontalAlignment="Right" FontFamily="Consolas, Courier New, monospace"/>
+                            <TextBlock Grid.Column="2"
+                                Text="{Binding SplitTime, Converter={StaticResource TimeSpanToStringConverter}}"
+                                Margin="1" HorizontalAlignment="Right" FontFamily="Consolas, Courier New, monospace"/>
+                        </Grid>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+        </DockPanel>
     </DockPanel>
 </Window>
