--- a/Source/LayoutItems/Timer/TimerControl.axaml
+++ b/Source/LayoutItems/Timer/TimerControl.axaml
@@ -1,12 +1,23 @@
 <UserControl xmlns="https://github.com/avaloniaui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:LibreSplit"
-    x:Class="LibreSplit.TimerControl"
-    x:DataType="local:TimerVM">
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:local="clr-namespace:LibreSplit"
+  x:Class="LibreSplit.TimerControl"
+  x:DataType="local:TimerVM">
+  <!-- <UserControl.Styles>
+    <Style Selector="TextBlock.Inactive">
+      <Setter Property="Foreground" Value="{Binding LayoutItem.InactiveColor}" />
+    </Style>
+    <Style Selector="TextBlock.Ahead">
+      <Setter Property="Foreground" Value="{Binding LayoutItem.AheadColor" />
+    </Style>
+    <Style Selector="TextBlock.Behind">
+      <Setter Property="Foreground" Value="{Binding LayoutItem.BehindColor}" />
+    </Style>
+  </UserControl.Styles> -->
   <Grid>
     <TextBlock Grid.Column="1"
-      Text="{Binding DataContext.Elapsed, Converter={StaticResource TimeSpanToStringConverter}}"
+      Text="{Binding Timer.Elapsed, Converter={StaticResource TimeSpanToStringConverter}}"
       Margin="1" HorizontalAlignment="Right" FontFamily="Consolas, Courier New, monospace"
-      FontSize="40" Foreground="{Binding LayoutItem.AheadColor}"/>
+      FontSize="40"  />
   </Grid>
 </UserControl>
