--- a/Source/Layout/Splits/SplitsEditor.axaml
+++ b/Source/Layout/Splits/SplitsEditor.axaml
@@ -1,9 +1,10 @@
 <UserControl xmlns="https://github.com/avaloniaui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:LibreSplit"
-    x:Class="LibreSplit.SplitsEditor"
-    x:DataType="local:SplitsEditor">
-  <Grid>
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+  xmlns:local="clr-namespace:LibreSplit"
+  xmlns:colorpicker="clr-namespace:AvaloniaColorPicker;assembly=AvaloniaColorPicker"
+  x:Class="LibreSplit.SplitsEditor"
+  x:DataType="local:SplitsEditor">
+  <Grid HorizontalAlignment="Stretch">
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="*" />
       <ColumnDefinition Width="Auto" />
@@ -12,9 +13,11 @@
       <RowDefinition Height="*" />
       <RowDefinition Height="*" />
     </Grid.RowDefinitions>
-    <TextBlock Text="Active Backgound Color" Grid.Row="0" Grid.Column="0"/>
-    <TextBox Text="{Binding LayoutItem.ActiveBGColor.Value}" Grid.Row="0" Grid.Column="1"/>
-    <TextBlock Text="Inactive Backgound Color" Grid.Row="1" Grid.Column="0"/>
-    <TextBox Text="{Binding LayoutItem.InactiveBGColor.Value}" Grid.Row="1" Grid.Column="1"/>
+    <TextBlock Text="Active Backgound Color" Grid.Row="0" Grid.Column="0" />
+    <colorpicker:ColorButton Grid.Row="0" Grid.Column="1"
+      Color="{Binding LayoutItem.ActiveBGColor, Mode=TwoWay, Converter={StaticResource StringToColorConverter}}" />
+    <TextBlock Text="Inactive Backgound Color" Grid.Row="1" Grid.Column="0" />
+    <colorpicker:ColorButton Grid.Row="1" Grid.Column="1"
+      Color="{Binding LayoutItem.InactiveBGColor, Mode=TwoWay, Converter={StaticResource StringToColorConverter}}" />
   </Grid>
 </UserControl>
