--- a/Source/Layout/Timer/TimerControl.axaml
+++ b/Source/Layout/Timer/TimerControl.axaml
@@ -7,11 +7,17 @@
     <Style Selector="TextBlock.Inactive">
       <Setter Property="Foreground" Value="{Binding LayoutItem.InactiveColor}" />
     </Style>
-    <Style Selector="TextBlock.Ahead">
-      <Setter Property="Foreground" Value="{Binding LayoutItem.AheadColor}" />
+    <Style Selector="TextBlock.AheadGainingTime">
+      <Setter Property="Foreground" Value="{Binding LayoutItem.AheadGainingTimeColor}" />
     </Style>
-    <Style Selector="TextBlock.Behind">
-      <Setter Property="Foreground" Value="{Binding LayoutItem.BehindColor}" />
+    <Style Selector="TextBlock.AheadLosingTime">
+      <Setter Property="Foreground" Value="{Binding LayoutItem.AheadLosingTimeColor}" />
+    </Style>
+    <Style Selector="TextBlock.BehindLosingTime">
+      <Setter Property="Foreground" Value="{Binding LayoutItem.BehindLosingTimeColor}" />
+    </Style>
+    <Style Selector="TextBlock.BehindGainingTime">
+      <Setter Property="Foreground" Value="{Binding LayoutItem.BehindGainingTimeColor}" />
     </Style>
   </UserControl.Styles>
   <Grid>
