--- a/Source/Layout/Timer/TimerControl.axaml
+++ b/Source/Layout/Timer/TimerControl.axaml
@@ -2,7 +2,7 @@
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:local="clr-namespace:LibreSplit"
   x:Class="LibreSplit.TimerControl"
-  x:DataType="local:TimerVM">
+  x:DataType="local:TimerViewModel">
   <UserControl.Styles>
     <Style Selector="TextBlock.Inactive">
       <Setter Property="Foreground" Value="{Binding LayoutItem.InactiveColor}" />
